src/objects/pse__Assignment__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentAndScheduleHelp</customHelpPage>
    <description>Stores information about the allocation of a resource to a project and specifies the bill rate and cost rate for time entered. It references the schedule for a resource and, optionally, a project milestone.</description>
    <fields>
        <fullName>pse__Action_Refresh_EVA_Hours_From_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</description>
        <inlineHelpText>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</inlineHelpText>
        <label>Action: Refresh EVA Hours From Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Hours_From_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</description>
        <inlineHelpText>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</inlineHelpText>
        <label>Action: Refresh Hours From Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes_Last_Updated__c</fullName>
        <description>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</description>
        <inlineHelpText>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes__c</fullName>
        <description>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</description>
        <inlineHelpText>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Number__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <description>Not intended for display. Needed to convert the autonumber to a numeric value for sorting.</description>
        <formula>Value(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>An auto-number used for batch processing assignments. Not intended for display.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <inlineHelpText>Enter the hourly bill rate for the resource</inlineHelpText>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Amount In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Amount Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Expense Reports and Expenses may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Expense Entry.</description>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Timecards may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Time Entry.</description>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <label>Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate__c</fullName>
        <formula>pse__Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(ROUND(pse__Cost_Rate_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Bill_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Timecard Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Schedule__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</description>
        <inlineHelpText>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Planners__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to exclude this assignment from the Resource Planner and Project Planner. NOTE: any excluded assignments will not be included totals calculations and color coding within the planners.</inlineHelpText>
        <label>Exclude from Planners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hours_to_Days_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies how to convert hours to days for time cards against this assignment</description>
        <inlineHelpText>Specifies how to convert hours to days for time cards against this assignment</inlineHelpText>
        <label>Hours to Days Rule</label>
        <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTICUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDERATED STATES OF MICRONESIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEORGIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAWAII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENTUCKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATIN AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOUISIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARSHALL ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARYLAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</description>
        <inlineHelpText>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Nick_Name__c</fullName>
        <description>Field for holding the nick name of the assignment</description>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Expense Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Expense Group For Assignments</relationshipLabel>
        <relationshipName>Override_ExpGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Expense Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Expense Practice For Assignments</relationshipLabel>
        <relationshipName>Override_ExpPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Expense Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Expense Region For Assignments</relationshipLabel>
        <relationshipName>Override_ExpRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Audit_Notes__c</fullName>
        <description>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Cost Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Cost Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Cost Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Revenue Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Revenue Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Revenue Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>User editable number of hours originally planned for this assignment. NOTE: this field is user maintained and will not be updated automatically.</description>
        <inlineHelpText>The number of hours originally planned for this assignment. This value is independent of the actual number of hours scheduled.</inlineHelpText>
        <label>Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Revenue__c</fullName>
        <description>Planned Hours * Bill Rate</description>
        <formula>pse__Planned_Hours__c * pse__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Planned Hours * Bill Rate</inlineHelpText>
        <label>Planned Revenue (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <inlineHelpText>The total number of project task hours entered for timecards against this Assignment. Do not manually edit this field.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Projected_Revenue__c</fullName>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Cost_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Resource Cost Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource Request Lookup populated only when assignment is created from a resource request.</description>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Updated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Schedule Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Days__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>